[project]
name = "lora-manager-web-frame"
description = "A simple custom node that embeds the full ComfyUI-Lora-Manager web interface directly into your ComfyUI workflow graph. This eliminates the need to have a separate browser tab open for managing your LoRAs and recipes."
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/revisiontony/Lora-Manager-Web-Frame"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/revisiontony/Lora-Manager-Web-Frame/wiki"
"Bug Tracker" = "https://github.com/revisiontony/Lora-Manager-Web-Frame/issues"

[tool.comfy]
PublisherId = "revybevy"
DisplayName = "Lora-Manager-Web-Frame"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

