[project]
name = "lora-manager-web-frame"
description = "A simple custom node that embeds the full ComfyUI-Lora-Manager web interface directly into your ComfyUI workflow graph. This eliminates the need to have a separate browser tab open for managing your LoRAs and recipes."
version = "1.0.1"
license = {text = "MIT"}
dependencies = []

[project.urls]
Repository = "https://github.com/revisiontony/Lora-Manager-Web-Frame"

[tool.comfy]
PublisherId = "revybevy"
DisplayName = "Lora-Manager-Web-Frame"
Icon = ""
